--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -13,6 +13,8 @@ job_environments:
     NEWRELIC_APPNAME: P4 Malaysia Development
     WP_DB_NAME: planet4-malaysia_wordpress_develop
     WP_STATELESS_BUCKET: planet4-malaysia-stateless-develop
+  release_build_env: &release_build_env
+    GOOGLE_PROJECT_ID: planet4-production
   release_environment: &release_environment
     APP_ENVIRONMENT: staging
     APP_HOSTNAME: release.k8s.p4.greenpeace.org
