--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ job_environments:
     CLOUDSQL_INSTANCE: planet4-prod
     GCLOUD_CLUSTER: planet4-production
     GOOGLE_PROJECT_ID: planet4-production
-    HELM_NAMESPACE: malaysia
+    HELM_NAMESPACE: malaysia-staging
     HELM_RELEASE: planet4-malaysia-release
     WP_DB_NAME: planet4-malaysia_wordpress_release
     WP_STATELESS_BUCKET: planet4-malaysia-stateless-release
