--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -8,7 +8,7 @@ job_environments:
     CLOUDSQL_INSTANCE: p4-develop-k8s
     GOOGLE_PROJECT_ID: planet-4-151612
     GCLOUD_CLUSTER: p4-development
-    HELM_NAMESPACE: develop
+    HELM_NAMESPACE: malaysia
     HELM_RELEASE: planet4-malaysia
     WP_DB_NAME: planet4-malaysia_wordpress_develop
     WP_STATELESS_BUCKET: planet4-malaysia-stateless-develop
@@ -20,7 +20,7 @@ job_environments:
     CLOUDSQL_INSTANCE: planet4-prod
     GCLOUD_CLUSTER: planet4-production
     GOOGLE_PROJECT_ID: planet4-production
-    HELM_NAMESPACE: malaysia
+    HELM_NAMESPACE: malaysia-staging
     HELM_RELEASE: planet4-malaysia-release
     WP_DB_NAME: planet4-malaysia_wordpress_release
     WP_STATELESS_BUCKET: planet4-malaysia-stateless-release
