--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,8 @@ job_environments:
     GOOGLE_PROJECT_ID: planet4-production
     HELM_NAMESPACE: malaysia
     HELM_RELEASE: planet4-malaysia-master
-    MIN_REPLICA_COUNT: 2
+    MIN_REPLICA_COUNT: 1
+    MAX_REPLICA_COUNT: 1
     WP_DB_NAME: planet4-malaysia_wordpress_master
     WP_STATELESS_BUCKET: planet4-malaysia-stateless
 
